src/objects/RequestForStock__c.object
<CustomObject>
    <description>This is request for stock object discussed in the Axiom demo description</description>
    <fields>
        <fullName>Current_Stock__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Current Stock</label>
        <precision>12</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Date__c</fullName>
        <label>Expected Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This is product description introduced in the demo.</description>
        <label>Product</label>
        <referenceTo>product__c</referenceTo>
        <relationshipLabel>RequestForStock</relationshipLabel>
        <relationshipName>RequestForStock</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RequiredStock__c</fullName>
        <label>RequiredStock</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>RequestForStock</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>RequestForStock Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RequestForStock</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>stocklimit</fullName>
        <active>true</active>
        <description>stocklimit - Demo</description>
        <errorConditionFormula>Current_Stock__c + RequiredStock__c &lt; 500</errorConditionFormula>
        <errorMessage>stock limit exceeds 500</errorMessage>
    </validationRules>
</CustomObject>